@@ -2,6 +2,7 @@ V.Next
 ---------
 - [MINOR] Add null cursor BrokerCommunicationException error category (#2459)
 - [MINOR] Classifying more UNKNOWN_ERRORs (#2460)
+- [MINOR] Setting flights to control UrlConnection timeout values (#2473)
 
 Version 17.6.1
 ---------
